# SUSTech_CS205_Cpp_Projects

./: README.md
Lab/lab01/ex01/: ex01.cpp
Lab/lab02/: ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  run
Lab/lab05/: ex01.cpp  ex02.cpp  ex03.cpp
Lab/lab07/: ex01.cpp  ex02.cpp  ex03.cpp
Lab/lab08/: ex01.cpp
Lab/lab09/: ex01.cpp
Lab/lab10/: ex01.cpp
Lab/lab11/: ex01.cpp
Lab/lab12/: ex01.cpp  run
Lab/lab13/: ex01.cpp  matrix.h
Lab/lab14/: ex01.cpp  ex02.cpp
Lab/lab15/: ex01.cpp
Project01_a-simple-calculator/: README.md  calculator.cpp  luogu.cpp  maker.cpp  mul  num1.txt  num2.txt  report.md  result.txt
Project02_a-better-calculator/: CMakeLists.txt  COPYRIGHT  README.md  Run_Calculator.sh
Project02_a-better-calculator/doc/: Project02 A Better Calculator.md
Project02_a-better-calculator/src/: CMakeLists.txt
Project03_a-libray-for-matrix-operations-in-C/: CMakeLists.txt  COPYRIGHT  README.md  Run_Matrix.sh
Project03_a-libray-for-matrix-operations-in-C/doc/: Project3 A Libray for Matrix Operations in C.md  myMatrix.txt
Project03_a-libray-for-matrix-operations-in-C/src/: CMakeLists.txt  main.c  matrix.c  matrix.h
Project03_a-libray-for-matrix-operations-in-C/test/: Check_Style.sh
Project04_matrix-multiplication-in-C/: CMakeLists.txt  README.md  Run_Matmul.sh  matmulTest
Project04_matrix-multiplication-in-C/doc/: cpp_data.xlsx  report.md
Project04_matrix-multiplication-in-C/src/: CMakeLists.txt  matmul.c  matmul.h  matrix.c  matrix.h  test.c
Project05_a-class-for-matrices/: CMakeLists.txt  README.md  Run_MatrixClassTest.sh  matrixClassTest
(+54 files in other folders)
